@@ -15,15 +15,16 @@ import org.springframework.web.server.ResponseStatusException;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class RestCardServiceImpl implements RestCardService {
     private static final Logger LOGGER = LoggerFactory.getLogger(RestCardServiceImpl.class);
     private static final String ACCOUNT_SEARCHING_LOG = "Trying to find Account by: {}";
     private static final String ACCOUNT_NOT_FOUND_LOG = "Account was not found by: {}";
+    private static final String ACCOUNT_WAS_FOUND_LOG = "Account with: {} was found";
     private static final String USER_SEARCHING_LOG = "Trying to find User by: {}";
     private static final String USER_NOT_FOUND_LOG = "User was not found by: {}";
+    private static final String USER_WAS_FOUND_LOG = "User with: {} was found";
     private static final String CARD_SEARCHING_LOG = "Trying to find Card by: {}";
     private static final String CARD_FOUND_LOG = "Card was found and received to the Controller: {}";
 
@@ -86,62 +87,74 @@ public class RestCardServiceImpl implements RestCardService {
     @Override
     public List<CardDTO> getCardsByCardHolderFullName(String cardHolderFullName) {
         LOGGER.info(USER_SEARCHING_LOG, cardHolderFullName);
-        usersComponentClient.findByFullName(cardHolderFullName).orElseThrow(() -> {
-            LOGGER.error(USER_NOT_FOUND_LOG, cardHolderFullName);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "User with such Full Name: " + cardHolderFullName + " was not found");
-        });
+        usersComponentClient.existenceCheck(cardHolderFullName)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(ACCOUNT_NOT_FOUND_LOG, cardHolderFullName);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "User with such Full Name: " + cardHolderFullName + " was not found");
+                });
+        LOGGER.debug(USER_WAS_FOUND_LOG, cardHolderFullName);
 
         LOGGER.info("Trying to find all Cards linked to User Name: {}", cardHolderFullName);
         List<Card> cards = cardRepository.findAllByCardHolderFullName(cardHolderFullName);
         LOGGER.info(CARD_FOUND_LOG, cards);
         return cards.stream()
                 .map(this::convertCardModelToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CardDTO> getAllAccountCardsByAccountId(UUID accountId) {
         LOGGER.info(ACCOUNT_SEARCHING_LOG, accountId);
-        accountComponentClient.findById(accountId).orElseThrow(() -> {
-            LOGGER.error(ACCOUNT_NOT_FOUND_LOG, accountId);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "Account with such ID: " + accountId + " was not found");
-        });
+        accountComponentClient.existenceCheck(accountId)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(ACCOUNT_NOT_FOUND_LOG, accountId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "Account with such ID: " + accountId + " was not found");
+                });
+        LOGGER.debug(ACCOUNT_WAS_FOUND_LOG, accountId);
 
         LOGGER.info("Trying to find all Cards linked to Account with ID: {}", accountId);
         List<Card> cards = cardRepository.findAllByAccountId(accountId);
         LOGGER.info(CARD_FOUND_LOG, cards);
         return cards.stream()
                 .map(this::convertCardModelToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CardDTO> getAllUserCardsByCardHolderId(UUID holderId) {
         LOGGER.info(USER_SEARCHING_LOG, holderId);
-        usersComponentClient.findById(holderId).orElseThrow(() -> {
-            LOGGER.error(USER_NOT_FOUND_LOG, holderId);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "User with such ID: " + holderId + " was not found");
-        });
+        usersComponentClient.existenceCheck(holderId)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(USER_NOT_FOUND_LOG, holderId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "User with such ID: " + holderId + " was not found");
+                });
+        LOGGER.debug(USER_WAS_FOUND_LOG, holderId);
 
         LOGGER.info("Trying to find all Cards linked to User with ID: {}", holderId);
         List<Card> cards = cardRepository.findAllByCardHolderUUID(holderId);
         LOGGER.info(CARD_FOUND_LOG, cards);
         return cards.stream()
                 .map(this::convertCardModelToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CardDTO> getAllUserCardsByStatus(UUID holderId, String status) {
         LOGGER.info(USER_SEARCHING_LOG, holderId);
-        usersComponentClient.findById(holderId).orElseThrow(() -> {
-            LOGGER.error(USER_NOT_FOUND_LOG, holderId);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "User with such ID: " + holderId + " was not found");
-        });
+        usersComponentClient.existenceCheck(holderId)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(USER_NOT_FOUND_LOG, holderId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "User with such ID: " + holderId + " was not found");
+                });
+        LOGGER.debug(USER_WAS_FOUND_LOG, holderId);
 
         LOGGER.info("Trying to find all Cards linked to User by" +
                 " Card Status: {}", status);
@@ -149,17 +162,20 @@ public class RestCardServiceImpl implements RestCardService {
         LOGGER.info(CARD_FOUND_LOG, cards);
         return cards.stream()
                 .map(this::convertCardModelToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CardDTO> getAllExpiredCards(UUID holderId) {
         LOGGER.info(USER_SEARCHING_LOG, holderId);
-        usersComponentClient.findById(holderId).orElseThrow(() -> {
-            LOGGER.error(USER_NOT_FOUND_LOG, holderId);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "User with such ID: " + holderId + " was not found");
-        });
+        usersComponentClient.existenceCheck(holderId)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(USER_NOT_FOUND_LOG, holderId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "User with such ID: " + holderId + " was not found");
+                });
+        LOGGER.debug(USER_WAS_FOUND_LOG, holderId);
 
         LOGGER.info("Trying to find all expired Cards linked to User with ID: {}", holderId);
         List<Card> cards = cardRepository.findAllByCardHolderUUID(holderId);
@@ -169,17 +185,21 @@ public class RestCardServiceImpl implements RestCardService {
                     LOGGER.info(CARD_FOUND_LOG, filteredEntity);
                     return convertCardModelToDTO(filteredEntity);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<CardDTO> getAllActiveCards(UUID holderId) {
         LOGGER.info(USER_SEARCHING_LOG, holderId);
-        usersComponentClient.findById(holderId).orElseThrow(() -> {
-            LOGGER.error(USER_NOT_FOUND_LOG, holderId);
-            return new ResponseStatusException(HttpStatus.NOT_FOUND,
-                    "User with such ID: " + holderId + " was not found");
-        });
+        usersComponentClient.existenceCheck(holderId)
+                .filter(Boolean.TRUE::equals)
+                .orElseThrow(() -> {
+                    LOGGER.error(USER_NOT_FOUND_LOG, holderId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND,
+                            "User with such ID: " + holderId + " was not found");
+                });
+        LOGGER.debug(USER_WAS_FOUND_LOG, holderId);
+
         LOGGER.info("Trying to find all active Cards linked to User with ID: {}", holderId);
         List<Card> cards = cardRepository.findAllByCardHolderUUID(holderId);
         return cards.stream()
@@ -188,6 +208,6 @@ public class RestCardServiceImpl implements RestCardService {
                     LOGGER.info(CARD_FOUND_LOG, filteredEntity);
                     return convertCardModelToDTO(filteredEntity);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 }
